tests/expectations/compiler/const_generics/unresolved_struct_type_fail.out
Error [ECMP0376012]: Unable to resolve composite expression `b28668.aleo::Foo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:12:22
     |
  12 |             z: Foo::[self.caller] { x: 5 },
     |                      ^^^^^^^^^^^
Error [ECMP0376012]: Unable to resolve composite expression `b28668.aleo::Goo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:11:33
     |
  11 |         let g: Goo::[y] = Goo::[y] {
     |                                 ^
Error [ECMP0376012]: Unable to resolve composite type `b28668.aleo::Foo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:6:14
     |
   6 |     z: Foo::[self.caller],
     |              ^^^^^^^^^^^
Error [ECMP0376012]: Unable to resolve composite type `b28668.aleo::Goo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:11:22
     |
  11 |         let g: Goo::[y] = Goo::[y] {
     |                      ^
